objects/Document_Staging__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DocParser_Id__c</fullName>
        <externalId>true</externalId>
        <label>DocParser Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocParser_Link__c</fullName>
        <label>DocParser Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Document_Count__c</fullName>
        <label>Document Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Document_Source__c</fullName>
        <label>Document Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Community</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Subject__c</fullName>
        <label>Email Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoming_Email_Address__c</fullName>
        <label>Incoming Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Uploaded</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Document Staging</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Document_Source__c</columns>
        <columns>Status__c</columns>
        <columns>DocParser_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SPECIFIC</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>94</value>
        </filters>
        <label>SPECIFIC</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>test_att</fullName>
        <columns>NAME</columns>
        <columns>Comments__c</columns>
        <columns>Document_Source__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Email_Subject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Document_Source__c</field>
            <operation>equals</operation>
            <value>Email</value>
        </filters>
        <label>test split att from email</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Doc-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>